--- a/lpsicongroup.css
+++ b/lpsicongroup.css
@@ -5,10 +5,10 @@
 	overflow: auto;
 		/*list-style-type: none; */
 	margin: 0px;
-	padding: 10px;
+	/*padding: 10px;*/
 	padding-top:0px;
 	padding-bottom: 40px; 
-	width: 1400px;
+	width: 100%;
 	/*height: 1056px;*/
 	/*background-color:red;*/
 	background: url("da_background_blur.png");
@@ -105,7 +105,7 @@
 	color:white;
 	background-color: rgba(0,0,0,0.2);
 	border-radius:5px;
-	width:150px;
+	width:168px;
 	text-align: center;
 	margin-left: auto;
 	margin-right: auto;
