--- a/lpsicongroup.css
+++ b/lpsicongroup.css
@@ -105,7 +105,9 @@
 	color:white;
 	background-color: rgba(0,0,0,0.2);
 	border-radius:5px;
-	width:168px;
+	width:150px;
+	padding-left: 9px;
+	padding-right: 9px;
 	text-align: center;
 	margin-left: auto;
 	margin-right: auto;
